# Industrial-Patrol-Robot-System

./: README.md
code/: README.md
code/robot_control/camera_driver/: README.MD
code/robot_control/camera_driver/astra_camera/: CMakeLists.txt
code/robot_control/camera_driver/astra_camera/launch/: gemini.launch.py
code/robot_control/lidar_driver/: README.md
code/robot_control/lidar_driver/lslidar_driver/include/lslidar_driver/: lslidar_driver.h
code/robot_control/lidar_driver/lslidar_driver/params/: lslidar_cx.yaml  lslidar_cx_front.yaml  lslidar_cx_left.yaml  lslidar_cx_rear.yaml  lslidar_cx_right.yaml
code/robot_control/lidar_driver/lslidar_driver/src/: lslidar_driver.cpp
code/robot_control/lidar_driver/pointcloud_to_laserscan-humble/launch/: pointcloud_to_laserscan_launch.py
code/robot_control/localization/FAST_LIO/: CMakeLists.txt
code/robot_control/localization/FAST_LIO/config/: laser.yaml  mid360.yaml
code/robot_control/localization/FAST_LIO/rviz/: fastlio.rviz
code/robot_control/localization/FAST_LIO/rviz_cfg/: loam_livox.rviz
code/robot_control/localization/FAST_LIO/src/: laserMapping.cpp  preprocess.cpp  relay_path.cpp  save_map.cpp
code/robot_control/localization/exact_loc/: CMakeLists.txt  package.xml
code/robot_control/localization/exact_loc/config/: config.yaml
code/robot_control/localization/exact_loc/include/exact_loc/: icp.hpp
code/robot_control/localization/exact_loc/launch/: icp_node.launch.py
code/robot_control/localization/exact_loc/src/: icp.cpp
code/robot_control/localization/relocalization/: CMakeLists.txt  package.xml
code/robot_control/localization/relocalization/config/: config.yaml  monitor_config.yaml
code/robot_control/localization/relocalization/include/relocalization/: icp.hpp  monitor.hpp
code/robot_control/localization/relocalization/launch/: icp_node.launch.py  monitor.launch.py
code/robot_control/localization/relocalization/src/: icp.cpp  monitor.cpp  start_test.cpp
code/robot_control/map_manager/pcd2pgm/: CMakeLists.txt  README.md  package.xml
code/robot_control/map_manager/pcd2pgm/config/: pcd2pgm.yaml
code/robot_control/map_manager/pcd2pgm/launch/: pcd2pgm.launch.py
code/robot_control/map_manager/pcd2pgm/src/: pcd2pgm.cpp
code/robot_control/map_manager/pcd_save/: CMakeLists.txt  package.xml
code/robot_control/map_manager/pcd_save/launch/: pcd_save.launch.py
code/robot_control/map_manager/pcd_save/src/: pcd_saver.cpp
code/robot_control/nav2/: CMakeLists.txt  package.xml
code/robot_control/nav2/config/: nav2_params.yaml  robot_nav.yaml
code/robot_control/nav2/launch/: navigation.launch.py
code/robot_control/nav2/src/: navigator.cpp
code/robot_control/navigation2/nav2_bringup/bringup/rviz/: nav2_default_view.rviz
code/robot_control/navigation2/nav2_lifecycle_manager/: README.md
code/robot_control/turn_on_wheeltec_robot/: CMakeLists.txt  package.xml
code/robot_control/turn_on_wheeltec_robot/include/turn_on_wheeltec_robot/: wheeltec_robot.h
code/robot_control/turn_on_wheeltec_robot/launch/: wheeltec_camera.launch.py
code/robot_control/turn_on_wheeltec_robot/src/: wheeltec_robot.cpp
code/server/patrol-robot-backend/: pom.xml
code/server/patrol-robot-backend/src/main/java/com/example/patrolrobotbackend/: PatrolRobotBackendApplication.java
code/server/patrol-robot-backend/src/main/java/com/example/patrolrobotbackend/config/: WebSocketConfig.java
code/server/patrol-robot-backend/src/main/java/com/example/patrolrobotbackend/controller/: AlertController.java  SimulatorController.java
code/server/patrol-robot-backend/src/main/java/com/example/patrolrobotbackend/entity/: Alert.java
code/server/patrol-robot-backend/src/main/java/com/example/patrolrobotbackend/mapper/: AlertMapper.java
code/server/patrol-robot-backend/src/main/java/com/example/patrolrobotbackend/mqtt/: MqttReceiver.java  MqttSender.java
code/server/patrol-robot-backend/src/main/java/com/example/patrolrobotbackend/service/: AlertService.java
code/server/patrol-robot-backend/src/main/java/com/example/patrolrobotbackend/websocket/: RobotWebSocketHandler.java  WebSocketMessageService.java
code/server/patrol-robot-backend/src/main/resources/: application.properties
code/server/patrol-robot-backend/src/main/resources/mapper/: AlertMapper.xml
code/server/patrol-robot-backend/src/test/java/com/example/patrolrobotbackend/: PatrolRobotBackendApplicationTests.java
code/server/robot-frontend/: README.md  app.json  app.wxss  babel.config.js  irr_uncertainty_analysis.py  package-lock.json  package.json  project.config.json  project.private.config.json
code/server/robot-frontend/pages/history/: history.js  history.json  history.wxml  history.wxss
code/server/robot-frontend/pages/map/: map.js  map.json  map.wxml  map.wxss
code/yolo/: convert_model.py  readme.md  test.py
code/yolo/HumanRecognition/: CMakeLists.txt  human_detector.cpp  human_detector.h  main.cpp
code/yolo/Person-Fire-Detection/: human_detector.cpp  human_detector.h  main.cpp
