<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2</name>
  <version>0.0.1</version>
  <description>Navigation package for robot</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_navfn_planner</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_recoveries</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_recoveries</depend>
  <depend>nav2_util</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_recoveries</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_velocity_smoother</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_navfn_planner</depend>
  <depend>nav2_dwb_controller</depend>
  <depend>nav2_regulated_pure_pursuit_controller</depend>
  <depend>nav2_rotation_shim_controller</depend>
  <depend>nav2_rotation_shim_recovery</depend>
  <depend>nav2_rotation_shim_controller</depend>
  <depend>nav2_rotation_shim_recovery</depend>
  <depend>nav2_rotation_shim_controller</depend>
  <depend>nav2_rotation_shim_recovery</depend>
  <depend>nav2_rotation_shim_controller</depend>
  <depend>nav2_rotation_shim_recovery</depend>
  <depend>nav2_rotation_shim_controller</depend>
  <depend>nav2_rotation_shim_recovery</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_velocity_smoother</depend>
</package>