<?xml version="1.0"?>
<package format="3">
  <name>pcd2pgm</name>
  <version>0.0.1</version>
  <description>pcd2pgm</description>
  <maintainer email="kazulab10969@outlook.jp">kazuma yagi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>PCL</build_depend>
  <build_depend>OpenCV</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>PCL</exec_depend>
  <exec_depend>OpenCV</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
